# imgFilter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt  main.cpp
include/: LOMO.cpp  LOMO.h  SLIC.cpp  SLIC.h
